# covirus

./: .gitignore  .travis.yml  Dockerfile  LICENSE  README.md  README.rst  dev-requirements.in  dev-requirements.txt  docker-compose.yml  requirements.in  requirements.txt  setup.cfg  setup.py
covirus/data/: README.md  dataset.py  load_data.py
covirus/data/countries/: exceptions.py  load_countries_data.py
covirus/data/countries/brazil/: br_dataset.py  load_br.py
covirus/data/countries/brazil/sources/: __init__.py  wcota.py
covirus/data/utils/: __init__.py
covirus/data/utils/io/: git.py  storage_handlers.py
covirus/data/worldwide/: load_world_data.py  world_dataset.py
covirus/data/worldwide/sources/: cbc_news.py  johns_hopkins.py
covirus/datasets/: __init__.py
covirus/datasets/countries/: __init__.py  brazil.py
covirus/datasets/utils/: __init__.py
covirus/models/: plotable.py
covirus/models/compartiment/: SIR.py  __init__.py  compartiment.py
covirus/models/compartment/: SEIR.py  SIR.py  __init__.py  compartment.py
covirus/tests/: conftest.py
covirus/tests/datasets/: conftest.py  test_dataset_functions.py  test_import_datasets.py  test_load_countries_dataset.py
covirus/tests/datasets/countries/: test_load_countries_dataset.py
covirus/tests/datasets/countries/brazil/: test_import_ms_dataset.py
covirus/tests/datasets/world/: test_load_johns_hopkins_dataset.py  test_news_dataset.py
covirus/tests/models/: utils.py
covirus/tests/models/compartiment/: test_sir.py
covirus/tests/models/compartment/: test_seir.py  test_sir.py
