# Type of python distribution
[bdist_wheel]
universal=0

[metadata]
name = covirus
author = Victor Maricato
author_email = maricatovictor@gmail.com
summary = A library for dealing with COVID19 analysis
license = MIT
description-file = README.rst
home-page = https://github.com/maricatovictor/covirus
python_requires = >=3.6
classifier =
   Programming Language :: Python :: 3
   License :: OSI Approved :: MIT License
   Operating System :: OS Independent

[options]
packages = find:
